--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,3 +5,4 @@ jdbc.driver=org.postgresql.Driver
 time=60
 link=https://career.habr.com
 link.page=https://career.habr.com/vacancies/java_developer?page=
+port=9000
